@@ -138,13 +138,13 @@ gnc_item_list_sort(GNCItemList *item_list)
 }
 
 
-void
+int
 gnc_item_list_autosize(GNCItemList *item_list)
 {
-        g_return_if_fail(item_list != NULL);
-	g_return_if_fail(IS_GNC_ITEM_LIST(item_list));
+        g_return_val_if_fail(item_list != NULL, 0);
+        g_return_val_if_fail(IS_GNC_ITEM_LIST(item_list), 0);
 
-        gtk_clist_columns_autosize(item_list->clist);
+        return gtk_clist_columns_autosize(item_list->clist);
 }
 
 
